--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -2,6 +2,14 @@
 
 {% block content%}
 
+<form action="/add/" method='POST'>
+    {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value ='Form Gönder'>
+</form>
+
+<p>*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--*--</p>
+
 <ul>
     {% for todo in todos %}
     
