--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar navbar-dark ">
+        <div class="container-fluid ">
+            <a class="navbar-brand" href="/">
+            <img src="{% static 'todo/images/cw_logo.png' %}" alt="Hi!" width="45" height="45">
+            Clarusway Todo App</a>
+        </div>
+    </nav>
 
     {% block content%}
     
