--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -21,6 +21,16 @@
         </div>
     </nav>
 
+    {% if messages %} 
+        {% for message in messages %} 
+            {% if message.tags == "warning" %}
+                <div id="warning" class="message">{{ message }}</div>
+            {% else %}
+                <div id="success" class="message">{{ message }}</div>
+            {% endif %} 
+        {% endfor %} 
+    {% endif %}
+
     {% block content%}
     
     {% endblock content%}
