--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -1,12 +1,20 @@
 {% extends 'todo/base.html' %}
+{% block content %}
 
-{% block content%}
 
-<h1>To Do Update</h1>
-<form action="" method='POST'>
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value ='Güncelleyiniz'>
-</form>
 
-{% endblock content%}
+<div class="col-lg-4 mx-auto p-0 shadow">
+    <div class="alert alert-warning text-center">
+        <h2>Update ToDo</h2>
+    </div>
+    <div class="p-4 d-flex align-items-center ">
+        <form action="" method="POST">
+            {% csrf_token%} {{form.as_p}}
+            <hr>
+            <input type="submit" value="UPDATE" class="btn btn-success">
+        </form>
+    </div>
+</div>
+
+
+{% endblock content %}
